<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:background="@color/grey_50">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/AppTheme.TitleSingleLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/forgot_password_title"
            android:textColor="?colorAccent"/>

        <TextView
            style="@style/AppTheme.TitleSingleLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:maxLines="4"
            android:text="@string/forgot_password_description" />


        <EditText
            style="@style/AppTheme.EditText"
            android:layout_marginTop="16dp"
            android:hint="@string/forgot_password_doc_code_hint"
            android:id="@+id/forgot_password_doc_code_et"/>

        <TextView
            style="@style/AppTheme.EditText"
            android:layout_marginTop="4dp"
            android:text="@string/forgot_password_birthday_hint"
            android:textColor="@color/grey_600"
            android:gravity="center_vertical"
            android:id="@+id/forgot_password_birthday_tv"/>

        <EditText
            style="@style/AppTheme.EditText"
            android:layout_marginTop="4dp"
            android:hint="@string/forgot_password_email_hint"
            android:inputType="textEmailAddress"
            android:id="@+id/forgot_password_email_et"/>

        <EditText
            style="@style/AppTheme.EditText"
            android:layout_marginTop="16dp"
            android:hint="@string/forgot_password_new_password_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:id="@+id/forgot_password_new_pass_et"/>

        <EditText
            style="@style/AppTheme.EditText"
            android:layout_marginTop="4dp"
            android:hint="@string/forgot_password_new_password_confirm_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:id="@+id/forgot_password_new_pass_confirm_et"/>
    </LinearLayout>

    <Button
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:text="@string/forgot_password_change_password"
        android:id="@+id/forgot_password_change_pass_bt"/>
</LinearLayout>