<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_weight="1.2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/AppTheme.TitleSingleLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_description"
                android:maxLines="2"/>

            <EditText
                android:layout_marginTop="16dp"
                style="@style/AppTheme.EditText"
                android:hint="@string/sign_up_name_hint"
                android:inputType="textPersonName"
                android:id="@+id/sign_up_full_name_et"
                />

            <EditText
                style="@style/AppTheme.EditText"
                android:layout_marginTop="8dp"
                android:hint="@string/sign_up_doc_code_hint"
                android:id="@+id/sign_up_doc_code_et"
                android:inputType="textShortMessage"
                android:maxLines="1"/>

            <TextView
                style="@style/AppTheme.EditText"
                android:layout_marginTop="8dp"
                android:text="@string/sign_up_birthday_hint"
                android:textColor="@color/grey_600"
                android:gravity="center_vertical"
                android:id="@+id/sign_up_birthday_tv"/>

            <EditText
                style="@style/AppTheme.EditText"
                android:layout_marginTop="32dp"
                android:hint="@string/sign_up_email_hint"
                android:inputType="textEmailAddress"
                android:id="@+id/sign_up_email_et"/>

            <EditText
                style="@style/AppTheme.EditText"
                android:layout_marginTop="8dp"
                android:hint="@string/sign_up_password_hint"
                android:inputType="textPassword"
                android:maxLength="12"
                android:id="@+id/sign_up_pass_et"/>

            <EditText
                style="@style/AppTheme.EditText"
                android:layout_marginTop="8dp"
                android:hint="@string/sign_up_password_confirm_hint"
                android:inputType="textPassword"
                android:maxLength="12"
                android:id="@+id/sign_up_pass_confirm_et"/>

        </LinearLayout>

        <Button
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:text="@string/sign_up_send"
            android:id="@+id/sign_up_send_bt"/>

    </LinearLayout>
</ScrollView>