<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_white"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/login_fields_ll"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center">

        <EditText
            style="@style/AppTheme.FlyingEditText"
            android:layout_width="match_parent"
            android:hint="@string/login_email_hint"
            android:id="@+id/login_email_et"
            android:inputType="textEmailAddress"/>

        <EditText
            style="@style/AppTheme.FlyingEditText"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:hint="@string/login_password_hint"
            android:id="@+id/login_pass_et"
            android:inputType="textPassword"/>

        <Button
            style="@style/AppTheme.Button"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:text="@string/login_sign_in"
            android:id="@+id/login_sign_in_bt" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:id="@+id/login_links_ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_pass"
            android:id="@+id/login_forgot_pass_tv"
            android:padding="8dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_up"
            android:id="@+id/login_sign_up_tv"
            android:padding="8dp"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>